--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,23 @@
-.main-slider img {
+.main-slider {
+	width: 100%;
+	background-color: white;
+	border-bottom: 3px solid #F7A720;
 	filter: brightness(50%);
 }
 
-.main-slider .notes {
+.main-slider img {
+	width: 50%;
+	margin: 0 auto;
+}
+
+.notes {
 	text-align: center;
 	position: absolute;
-	top: 80%;
+	top: 75%;
 	line-height: 2.5em;
-	z-index: 10;
+	z-index: 30;
 	color: white;
+	font-size: 1.25em;
 }
 
 .main-slider .slick-dots {
