--- a/css/style.css
+++ b/css/style.css
@@ -10,14 +10,13 @@
 	margin: 0 auto;
 }
 
-.notes {
+.main-slider .notes {
 	text-align: center;
 	position: absolute;
-	top: 75%;
+	top: 80%;
 	line-height: 2.5em;
-	z-index: 30;
+	z-index: 10;
 	color: white;
-	font-size: 1.25em;
 }
 
 .main-slider .slick-dots {
